bump -> Java 24 s.t. we can start to use finalised native memory support in the JDK