@@ -34,7 +34,8 @@ val defaultJvmArgs = listOf(
     "-XX:-OmitStackTraceInFastThrow",
     "-Dlogback.configurationFile=${rootDir.resolve("src/main/resources/logback-test.xml")}",
     "-Dxtdb.rootDir=$rootDir",
-    "-Djunit.jupiter.extensions.autodetection.enabled=true"
+    "-Djunit.jupiter.extensions.autodetection.enabled=true",
+    "--enable-native-access=ALL-UNNAMED", // netty
 )
 
 val sixGBJvmArgs = listOf(
@@ -51,7 +52,7 @@ val twelveGBJvmArgs = listOf(
     "-XX:MaxMetaspaceSize=1g"
 )
 
-java.toolchain.languageVersion.set(JavaLanguageVersion.of(21))
+java.toolchain.languageVersion.set(JavaLanguageVersion.of(24))
 
 application {
     applicationName = "xtdb"
